changes and remove old stuffs

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Kraken Framework 0.8</title>
+	<title>Kraken Framework 0.9</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" href="css/reset.css">
@@ -10,7 +10,7 @@
 
 	<script lang="javascript" src="js/jquery.min.js"></script>
   <script src="js/responsiveslides.min.js"></script>
-  <script src="js/kraken.min.js"></script>
+  <script src="js/kraken.js"></script>
 
 <script>
 
