--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Kraken Framework 0.5</title>
+  <title>Kraken Framework</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" href="../css/reset.css">
@@ -191,6 +191,10 @@ $(document).ready(function(){
 </div>
 
 <br><br>
+
+<p><h3>Notifications</h3></p>
+
+
 <div class="button big pointer">
   <span class="bubble">10</span>
   Bubble Bubble Bubble Bubble Bubble Bubble 
@@ -200,6 +204,20 @@ $(document).ready(function(){
 
 <div id="decrease" class="button pointer">Decrease</div>
 <div id="increase" class="button pointer">Increase</div>
+
+
+
+<p>
+  <h3>Colors</h3>
+</p> 
+
+<div class="button green">Green</div>
+<div class="button orange">Orange</div>
+<div class="button purple">Purple</div>
+<div class="button gray">Gray</div>
+<div class="button aurora">Aurora</div>
+
+
 <!--END BUTTONS-->
 
 
