--- a/pages/others.html
+++ b/pages/others.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Kraken Framework 0.5</title>
+	<title>Kraken Framework</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" href="../css/reset.css">
@@ -112,20 +112,20 @@ $(document).ready(function(){
 <div class="grid-12">
 <h3>Caption</h3>
 
-  <figure class="effeckt-caption effeckt-caption-1 grid-6">
+  <figure class="k-caption k-caption-1 grid-6">
     <img src="http://placehold.it/300x200&text=caption+2" alt="">
     <figcaption>
-      <div class="effeckt-figcaption-wrap">
+      <div class="k-figcaption-wrap">
         <h3>Appear</h3>
         <p>Lorem ipsum dolar.</p>
       </div>
     </figcaption>
   </figure>
 
-  <figure class="effeckt-caption effeckt-caption-5 grid-6">
+  <figure class="k-caption k-caption-5 grid-6">
     <img src="http://placehold.it/300x200&text=caption+2" alt="">
     <figcaption>
-      <div class="effeckt-figcaption-wrap">
+      <div class="k-figcaption-wrap">
         <h3>Cover</h3>
         <p>Lorem ipsum dolar.</p>
       </div>
@@ -140,12 +140,49 @@ $(document).ready(function(){
   </div>
 </div>
 
-
+<h3>Switch</h3>
 
 <label class="switch">
   <input type="checkbox" class="switch__input">
   <div class="switch__toggle"></div>
 </label>
+
+<h3>Info</h3>
+
+
+<div class="grid-4 info-box focus">
+  <div class="info-title">
+    title
+  </div>
+  <img src="http://placehold.it/300x200&text=full-grid" class="full-grid">
+  <div class="grid-12 info-text">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, aut iste harum ex accusantium dolorem quas quaerat praesentium eaque esse nisi ab atque adipisci ipsa laudantium iusto alias recusandae voluptas.
+  </div>
+
+</div>
+
+<div class="grid-4 info-box focus">
+  <div class="info-title">
+    title
+  </div>
+  <img src="http://placehold.it/300x200&text=full-grid" class="full-grid">
+  <div class="grid-12 info-text">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, aut iste harum ex accusantium dolorem quas quaerat praesentium eaque esse nisi ab atque adipisci ipsa laudantium iusto alias recusandae voluptas.
+  </div>
+
+</div>
+
+<div class="grid-4 info-box focus">
+  <div class="info-title">
+    title
+  </div>
+  <img src="http://placehold.it/300x200&text=full-grid" class="full-grid">
+  <div class="grid-12 info-text">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, aut iste harum ex accusantium dolorem quas quaerat praesentium eaque esse nisi ab atque adipisci ipsa laudantium iusto alias recusandae voluptas.
+  </div>
+
+</div>
+
 
 <!--END SLIDER-->
 
