--- a/pages/grids.html
+++ b/pages/grids.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Kraken Framework 0.5</title>
+	<title>Kraken Framework</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" href="../css/reset.css">
