--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 	<title>Kraken Framework 0.9</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
 
+  <!-- <link rel="stylesheet" href="css/compile.css"> -->
+  <!-- <link rel="stylesheet" href="css/custom.css"> -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/kraken.css">
 
 	<script lang="javascript" src="js/jquery.min.js"></script>
   <script src="js/responsiveslides.min.js"></script>
-  <script src="js/kraken.js"></script>
+  <script src="js/kraken.min.js"></script>
 
 <script>
 
