--- a/pages/progress.html
+++ b/pages/progress.html
@@ -36,7 +36,7 @@ $('.botton').on('click', function(){
   $('.bar4').KrakenTrigger('Progress', { progress : rand()} );
   $('.bar5').KrakenTrigger('Progress', { progress : rand()} );
 
-  console.log($('.bar5').KrakenTrigger('Progress', { progress : rand()} ).data().return);
+  console.log($('.bar5').KrakenTrigger('Progress', { progress : rand()} ).data().callback);
 
   $('.testeval1').KrakenTrigger('Eval', { type : 'email'} );
   $('.testeval3').KrakenTrigger('Eval', { type : 'email'} );
