--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 $(document).ready(function(){
 
   //New version
-  $.Kraken({ 
+  $.Kraken({
     pagesize : { width: 1024 },
   });
 
@@ -34,11 +34,9 @@ $(document).ready(function(){
     }
     else{
       $('.ulul').scrollTop($('.ulul').scrollTop()-3);
-      pagsc = sc; 
+      pagsc = sc;
       // console.log('scroll dimsminulle');
     }
-
-
   });
 
 });
@@ -50,7 +48,7 @@ $(document).ready(function(){
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <meta property="og:description" content="Framework basado en html5 para diseñar prototipos funcionales fácil y rápido. El propósito principal es que el usuario final no requiera conocimientos avanzados de jQuery o CSS. Con la integración de elementos pre diseñados. Tan simple como sea posible." /> 
+  <meta property="og:description" content="Framework basado en html5 para diseñar prototipos funcionales fácil y rápido. El propósito principal es que el usuario final no requiera conocimientos avanzados de jQuery o CSS. Con la integración de elementos pre diseñados. Tan simple como sea posible." />
 </head>
 
 <body>
@@ -83,12 +81,10 @@ $(document).ready(function(){
 </div>
 
 <!--WRAP-->
-<div class="wrap container">
+<div class="wrap container max-height">
 
 	<!--GRIDS-->
 	<div class="grids">
-
-<div class="span" value="3.5"></div>
 
 <div class="grid-12 mL">
   <div class="grid-10">
@@ -122,12 +118,6 @@ $(document).ready(function(){
         </h2>
       </div>
 
-
-
-
-
-<div class="span" value="3.5"></div>
- 
  <div class="break-a"></div>
 
  <div class="center">
@@ -143,7 +133,7 @@ $(document).ready(function(){
 <div class="clearfix"></div>
 
 <footer>
-  <div class="footer wrap">
+  <div class="footer wrap max-height">
   <!-- <img src="img/kraken.png" class="grid-12"> -->
     <div class="grid-4 center">
       <div class="span" value="1"></div>
