--- a/pages/fonts.html
+++ b/pages/fonts.html
@@ -66,8 +66,6 @@ $(document).ready(function(){
 	<!--GRIDS-->
 	<div class="grids">
 
-<div class="span" value="1"></div>
-
 <div class="grid-12 mL">
   <div class="grid-12">
     <h4>Fonts:</h4>
@@ -89,6 +87,10 @@ $(document).ready(function(){
   <h3>Texto</h3>
 
   <h4>Texto</h4>
+
+  <h5>Texto</h5>
+  
+  <h6>Texto</h6>
 
   <p class="box">box</p>
 
